
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;



unsigned int search_mem(FILE *fp,unsigned char *st,unsigned char *ed,
                unsigned char c1,unsigned char c2)
{
    unsigned char *p;
 unsigned int adr;

    for (p=st;p<ed;p++)
        if (*p==c1 && *(p+1)==c2){
   adr=(unsigned int)p;
   if ((adr&0xff)==0) continue;
   if (((adr>>8)&0xff)==0) continue;
   if (((adr>>16)&0xff)==0) continue;
   if (((adr>>24)&0xff)==0) continue;
   return(adr);
  }
 return(0);
}
